force-app/main/default/objects/Name__c.object
<CustomObject>
    <description>Name of a person (Contact)</description>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Relationship to Contact.</description>
        <inlineHelpText>Please provide the contact record this name is linked to.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Names</relationshipLabel>
        <relationshipName>Names</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>This defines the date until the name is valid for.</description>
        <inlineHelpText>Please provide the date the name is valid through, or leave it empty if it is not known or not end dated.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_System_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique ID used to identify records in an external system.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique ID used to identify records in an external system.</inlineHelpText>
        <label>External System ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First (given) name.</description>
        <inlineHelpText>Please provide the first (given) name.</inlineHelpText>
        <label>First name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name_Link__c</fullName>
        <description>Hyper-linked full name field for listview and related lists</description>
        <formula>HYPERLINK(&apos;/lightning/r/&apos;+ Id + &apos;/view&apos;,
Full_Name__c
, &apos;_self&apos;)</formula>
        <inlineHelpText>Hyper-linked full name field</inlineHelpText>
        <label>Full name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <description>Fullname built from:
Salutation__c/Prefix__c
First_Name__c/Preferred_First_Name
Middle_Name__c
Last_Name__c
Suffix__c</description>
        <formula>TRIM(
BLANKVALUE(TEXT(Salutation__c),Prefix__c) + &apos; &apos;
+ BLANKVALUE(Preferred_First_Name__c,First_Name__c + &apos; &apos; + Middle_Name__c ) + &apos; &apos;
+ Last_Name__c + &apos; &apos;
+ TEXT(Suffix__c)
)</formula>
        <inlineHelpText>Fullname built from the populated fields</inlineHelpText>
        <label>Full name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether a name is active, usually when end date is in the past or the start date is in the future. This value Is automatically (by a scheduled process) set to &quot;false&quot; if End_Date__c is populated and in the past or the Start_Date__c is in the future.
If manually set/changed to &quot;True&quot; (&quot;False&quot;), then the End_Date__c is automatically removed (added with the current date).</description>
        <inlineHelpText>Please indicate whether the name is active or not (inactive).</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Mononymous_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that there is no first name specified</description>
        <label>Mononymous Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Global primary (by Contact), as such only a single Name__c record can be flagged as primary per Contact Lookup.
If selected manually, all other records (for the Contact) will be marked as non-primary (false)
If none are selected, the entry with the latest Start_Date__c will be automatically marked as primary.</description>
        <inlineHelpText>Please indicate whether the name is the primary for this Contact.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_UID__c</fullName>
        <description>System Field - Unique Key Combination field</description>
        <externalId>true</externalId>
        <inlineHelpText>System Field - Unique Key Combination field</inlineHelpText>
        <label>Key UID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last name.</description>
        <inlineHelpText>Please provide the last (family) name.</inlineHelpText>
        <label>Last name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>Middle name(s).</description>
        <inlineHelpText>Please provide the middle name(s).</inlineHelpText>
        <label>Middle name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_First_Name__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>The preferred first name. This will be rolled up to the contact as the first name if primary.</description>
        <inlineHelpText>The preferred first name</inlineHelpText>
        <label>Preferred First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <description>Name prefix e.g. Prof, Dr, Honourable, Judge etc.</description>
        <inlineHelpText>Please provide the (formal) name prefix(es).</inlineHelpText>
        <label>Name Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_set_by__c</fullName>
        <description>Use as indicator if the record (only if Is_Primary__c changed) has been modified by user or system.</description>
        <label>Primary set by</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rollup_Rank__c</fullName>
        <description>System Field - a simple way to prioritise Student Names for Student Contacts. This is used as an additional sort in the name roll-up SOQL.</description>
        <formula>IF(AND(Contact__r.Is_Student__c,  ISPICKVAL(Type__c, &apos;Student Name&apos;)),&apos;10&apos;,&apos;100&apos;)</formula>
        <label>Rollup Rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <description>The salutation (non-honorific) of the person</description>
        <inlineHelpText>Please enter the salutation of the person.</inlineHelpText>
        <label>Salutation (Formal)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ms</fullName>
                </value>
                <value>
                    <fullName>Miss</fullName>
                </value>
                <value>
                    <fullName>Mrs</fullName>
                </value>
                <value>
                    <fullName>Mr</fullName>
                </value>
                <value>
                    <fullName>Mx</fullName>
                </value>
                <value>
                    <fullName>Dr</fullName>
                </value>
                <value>
                    <fullName>Professor</fullName>
                </value>
                <value>
                    <fullName>Associate Professor</fullName>
                </value>
                <value>
                    <fullName>Adjunct Associate Professor</fullName>
                </value>
                <value>
                    <fullName>Adjunct Professor</fullName>
                </value>
                <value>
                    <fullName>Advocate</fullName>
                </value>
                <value>
                    <fullName>Air Chief Marshal</fullName>
                </value>
                <value>
                    <fullName>Air Commodore</fullName>
                </value>
                <value>
                    <fullName>Air Vice-Marshal</fullName>
                </value>
                <value>
                    <fullName>Archbishop</fullName>
                </value>
                <value>
                    <fullName>Assistant Commissioner</fullName>
                </value>
                <value>
                    <fullName>Assistant Minister</fullName>
                </value>
                <value>
                    <fullName>Assistant Professor</fullName>
                </value>
                <value>
                    <fullName>Associate Professor Dr</fullName>
                </value>
                <value>
                    <fullName>Aunty</fullName>
                </value>
                <value>
                    <fullName>Baroness</fullName>
                </value>
                <value>
                    <fullName>Bishop</fullName>
                </value>
                <value>
                    <fullName>Brigadier</fullName>
                </value>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Cantor</fullName>
                </value>
                <value>
                    <fullName>Captain</fullName>
                </value>
                <value>
                    <fullName>Chief Commissioner</fullName>
                </value>
                <value>
                    <fullName>Chief Justice</fullName>
                </value>
                <value>
                    <fullName>Chief Magistrate</fullName>
                </value>
                <value>
                    <fullName>Clinical Associate Professor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Source of the name.</description>
        <inlineHelpText>Please enter source of the name, i.e. how were the details obtained.</inlineHelpText>
        <label>Source</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contact_Point_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The date the name is valid from.</description>
        <inlineHelpText>Please provide a date indicating the valid from for the name.</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <description>Name suffix e.g. AC, AO, AM, OAM, KBE, MBE, PMP etc.</description>
        <inlineHelpText>Please provide the (formal) name prefix(es).</inlineHelpText>
        <label>Name Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AAM</fullName>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AC AO (Mil) CVO MC (Retd)</fullName>
                </value>
                <value>
                    <fullName>AC CBE</fullName>
                </value>
                <value>
                    <fullName>AC CH</fullName>
                </value>
                <value>
                    <fullName>AC CMG</fullName>
                </value>
                <value>
                    <fullName>AC CVO</fullName>
                </value>
                <value>
                    <fullName>AC DBE</fullName>
                </value>
                <value>
                    <fullName>AC KBE</fullName>
                </value>
                <value>
                    <fullName>AC KBE CB KC</fullName>
                </value>
                <value>
                    <fullName>AC KBE CMG KC</fullName>
                </value>
                <value>
                    <fullName>AC KBE KC</fullName>
                </value>
                <value>
                    <fullName>AC KC</fullName>
                </value>
                <value>
                    <fullName>ACM</fullName>
                </value>
                <value>
                    <fullName>AC MBE</fullName>
                </value>
                <value>
                    <fullName>AC OBE</fullName>
                </value>
                <value>
                    <fullName>AD CVO</fullName>
                </value>
                <value>
                    <fullName>AFSM</fullName>
                </value>
                <value>
                    <fullName>AIM</fullName>
                </value>
                <value>
                    <fullName>AK AM MC (Retd)</fullName>
                </value>
                <value>
                    <fullName>AK GCMG GCVO KC</fullName>
                </value>
                <value>
                    <fullName>AK MC (Retd)</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AM APM</fullName>
                </value>
                <value>
                    <fullName>AM CSC</fullName>
                </value>
                <value>
                    <fullName>AM DSM</fullName>
                </value>
                <value>
                    <fullName>AM ESM</fullName>
                </value>
                <value>
                    <fullName>AM JP</fullName>
                </value>
                <value>
                    <fullName>AM KC</fullName>
                </value>
                <value>
                    <fullName>AM MBE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of the name.</description>
        <inlineHelpText>Please enter the name type</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Common</fullName>
                    <default>true</default>
                    <label>Common name</label>
                </value>
                <value>
                    <fullName>Maiden</fullName>
                    <label>Maiden name</label>
                </value>
                <value>
                    <fullName>Legal</fullName>
                    <label>Legal name</label>
                </value>
                <value>
                    <fullName>Non_Anglicised</fullName>
                    <label>Non-anglicised name</label>
                </value>
                <value>
                    <fullName>Birth name</fullName>
                </value>
                <value>
                    <fullName>Student name</fullName>
                </value>
                <value>
                    <fullName>Stage name</fullName>
                </value>
                <value>
                    <fullName>Other name</fullName>
                </value>
                <value>
                    <fullName>Anglicised</fullName>
                    <isActive>false</isActive>
                    <label>Anglicised</label>
                </value>
                <value>
                    <fullName>Artist</fullName>
                    <isActive>false</isActive>
                    <label>Artist</label>
                </value>
                <value>
                    <fullName>Full name</fullName>
                    <isActive>false</isActive>
                    <label>Full name</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Name</label>
    <listViews>
        <fullName>All_records</fullName>
        <columns>Full_Name_Link__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Is_Primary__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Contact__c</columns>
        <columns>Type__c</columns>
        <columns>Source__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All records</label>
    </listViews>
    <listViews>
        <fullName>Names_with_brackets</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Full_Name_Link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>First_Name__c</field>
            <operation>contains</operation>
            <value>(</value>
        </filters>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Is_Primary__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Names with brackets</label>
    </listViews>
    <nameField>
        <displayFormat>NAM-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Names</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_create_Callista_records</fullName>
        <active>true</active>
        <description>End users cannot create or update a record with the source field set to &quot;Callista&quot; as these are created through integration only.</description>
        <errorConditionFormula>AND(
  NOT(CONTAINS($User.Username, &apos;autoproc@&apos;)),
  $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
  OR(
    AND( ISNEW(), ISPICKVAL(Source__c, &apos;Callista&apos;) ),
    AND( ISCHANGED(Source__c), ISPICKVAL(Source__c, &apos;Callista&apos;) )
  ),
  NOT($Setup.Bypass_Mute_Request__c.Bypass_All_Validation_Rules__c)
)</errorConditionFormula>
        <errorDisplayField>Source__c</errorDisplayField>
        <errorMessage>End users cannot create or update a record with the source field set to &quot;Callista&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_date_must_not_be_older</fullName>
        <active>true</active>
        <description>Ensures that the start date is not older than the end date</description>
        <errorConditionFormula>AND(
	if (!ISBLANK(End_Date__c), Start_Date__c &gt; End_Date__c, FALSE),
    NOT($Setup.Bypass_Mute_Request__c.Bypass_All_Validation_Rules__c))</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>The end date must be equal or later than the start date.</errorMessage>
    </validationRules>
</CustomObject>